10 October 2011: Wouter
	- squelch EPIPE when writing AXFR, enable with verbosity 2.

26 September 2011: (Matthijs, from NSD3_2 branch)
	- Copy the DO bit to the response.
	- Don't return SERVFAIL on a domain that looks like a NSEC3
	  domain but is actually a empty non-terminal.

19 August 2011: Wouter
	- Fix segfault if no logfile is used.

5 August 2011: Wouter
	- Fix make from repeating action already taken.
	- Fix compile without openssl.

3 August 2011: Wouter
	- silence 'Broken pipe' messages in log (visible with verbosity 2).
	- fix makedist.sh for removal of patch, notify, xfer. new nsd-control.
	- tag 4.0.0-imp-5 created.
	- trunk is 4.0.0-imp-6 under development.
	- added nsd_munin_ script for statistics monitoring to contrib.

2 August 2011: Wouter
	- fix compile on Ubuntu 11.04 systems, detects cc system header issue.

1 August 2011: Wouter
	- fix checkconf test for remote control options.
	- fix warning on Ubuntu 10.04, fix autoconf 2.68 warning on NetBSD.

29 July 2011: Wouter
	- zones with no zonefile are not written to text (assumes you can
	  get AXFR and IXFR for the contents).  They are stored in nsd.db.
	- test for repattern.

28 July 2011: Wouter
	- nsd-control repattern reads TSIG and pattern configuration.

25 July 2011: Wouter
	- fixed tests for removed tools from nsd, with replacements.
	  replaced nsd-patch with nsd-control write. replaced nsd-notify with
	  ldns-notify. replaced nsd-xfer with dig -t axfr.
	- fix for xfrd restart if crashed. xfrd knows if a reload is
	  active at that time so it cannot start another one at the same
	  time.  New shortsoa track for start that does not use taskdb
	  in use by reload.  taskdb in use by crashed xfrd is recreated,
	  in case it is corrupt.  This keeps the nsd.db intact, keeps
	  reload running with its updated and keeps service from the
	  server processes active.

22 July 2011: Wouter
	- added contrib/nsd.init (nsdc.sh that only does start,stop).